Revert "fixing 2x spacing"
This reverts commit 86ff0898154d36496e2a23679a237dfb2e9d4413.

--- a/src/app/shared/components/expenses-card/expenses-card.component.scss
+++ b/src/app/shared/components/expenses-card/expenses-card.component.scss
@@ -226,7 +226,7 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 1.25;
-    margin-right: 2px;
+    margin-right: 0;
   }
 
   &--amount {
